# numaprof

./: .gitignore  .gitlab-ci.yml  .travis.yml  Authors.md  CMakeLists.txt  ChangeLog.md  Doxyfile  README.md  configure  options  options.sh
cmake/: FindGMock.cmake  FindHwloc.cmake  FindNpm.cmake  FindNumactl.cmake  FindPintool.cmake  FindPip.cmake  macros.cmake  unittest-macros.cmake
dev/: gen-archive.sh  update-version.sh
doc/: bibliography.md
extern-deps/: CMakeLists.txt
extern-deps/from-fftw/: cycle.h
extern-deps/from-htopml/json/: JsonState.cpp
extern-deps/from-malt-v2/: CMakeLists.txt  Debug.hpp  FormattedMessage.cpp  LinuxProcMapReader.cpp  SymbolRegistry.cpp  SymbolRegistry.hpp
extern-deps/from-numactl/: MovePages.cpp  MovePages.hpp
extern-deps/gmock-1.7.0/: CMakeLists.txt
extern-deps/gmock-1.7.0/gtest/src/: gtest-death-test.cc
extern-deps/iniparser/: CMakeLists.txt
extern-deps/iniparser/src/: CMakeLists.txt  iniparser.c
extern-deps/openpa/: README.md  opa_queue.h
inegration/pintool/: main.c  main.cpp  makefile.rules  numaprof-to-callgrind.py  numaprof.cpp  scala.sh
integration/: CMakeLists.txt
integration/pintool/: Makefile  makefile.rules  numaprof.cpp  scala.sh
integration/scripts/: CMakeLists.txt  numaprof-pintool.sh  numaprof-pintool.sh.in  numaprof-to-callgrind.py
manpages/: numaprof-passwd.1.html  numaprof-passwd.ronn  numaprof-webview.1.bz2  numaprof-webview.1.html  numaprof-webview.ronn  numaprof.1.bz2  numaprof.1.html  numaprof.ronn
src/: CMakeLists.txt  Debug.cpp  Debug.hpp  Helper.cpp  Helper.hpp  MallocTracker.cpp  MallocTracker.hpp  MovePages.cpp  MovePages.hpp  Mutex.hpp  NumaTopo.cpp  NumaTopo.hpp  PageTable.cpp  PageTable.hpp  ProcessTracker.cpp  ProcessTracker.hpp  Stack.cpp  Stack.hpp  Stats.cpp  Stats.hpp  ThreadTracker.cpp  ThreadTracker.hpp  TopoHwloc.cpp  TopoHwloc.hpp
src/common/: CMakeLists.txt  Debug.cpp  FormattedMessage.cpp  Helper.cpp  Helper.hpp  Options.cpp  Options.hpp
src/core/: AccessMatrix.cpp  AccessMatrix.hpp  CMakeLists.txt  MallocTracker.cpp  MallocTracker.hpp  PageTable.cpp  PageTable.hpp  ProcessTracker.cpp  ProcessTracker.hpp  Stack.cpp  Stack.hpp  Stats.cpp  Stats.hpp  ThreadTracker.cpp  ThreadTracker.hpp
src/integration/: CMakeLists.txt
src/integration/pintool/: CMakeLists.txt  Makefile.pin.in  makefile.rules.in  numaprof.cpp  scala.sh
src/integration/scripts/: CMakeLists.txt  numaprof-pintool.sh.in  numaprof-to-callgrind.py
src/lib/: CMakeLists.txt
src/lib/caches/: CMakeLists.txt  CpuCache.cpp  CpuCache.hpp  CpuCacheBuilder.cpp  CpuCacheBuilder.hpp  CpuCacheDummy.cpp  CpuCacheDummy.hpp  CpuSimpleFlatCache.cpp  CpuSimpleFlatCache.hpp  CpuSimpleFlatCacheStatic.hpp  CpuSimpleFlatCacheStatic_impl.hpp
src/lib/common/: CMakeLists.txt  Debug.cpp  Debug.hpp  FormattedMessage.cpp  FormattedMessage.hpp  Helper.cpp  Helper.hpp  Options.cpp  Options.hpp  StaticAssoCache.hpp  StaticAssoCache_impl.hpp
src/lib/core/: AccessMatrix.cpp  AccessMatrix.hpp  CMakeLists.txt  MallocTracker.cpp  MallocTracker.hpp  PageTable.cpp  PageTable.hpp  ProcessTracker.cpp  ProcessTracker.hpp  Stack.cpp  Stack.hpp  Stats.cpp  Stats.hpp  ThreadTracker.cpp  ThreadTracker.hpp
src/lib/portability/: CMakeLists.txt  Clock.cpp  Clock.hpp  Mutex.hpp  NumaTopo.cpp  NumaTopo.hpp  OS.cpp  OS.hpp  TopoHwloc.cpp  TopoHwloc.hpp
src/lib/tests/: BenchCpuCache.cpp  BenchInstrCache.cpp  BenchTBLVsPageTable.cpp  CMakeLists.txt  ReplayAllocTracker.cpp  TestCpuCacheBuilder.cpp  TestCpuCacheDummy.cpp  TestCpuSimpleFlatCache.cpp  TestCpuSimpleFlatCacheStatic.cpp  TestFormattedMessage.cpp  TestHelper.cpp  TestMallocTracker.cpp  TestMovePages.cpp  TestPageTable.cpp  TestStack.cpp  TestStaticAssoCache.cpp
src/manpages/: CMakeLists.txt  Makefile  numaprof-passwd.1.bz2  numaprof-passwd.1.html  numaprof-passwd.ronn  numaprof-qt5.1.bz2  numaprof-qt5.1.html  numaprof-qt5.ronn  numaprof-webview.1.bz2  numaprof-webview.1.html  numaprof-webview.ronn  numaprof.1.bz2  numaprof.1.html  numaprof.ronn
src/portability/: CMakeLists.txt  Clock.cpp  Clock.hpp  NumaTopo.cpp  NumaTopo.hpp  OS.cpp  OS.hpp  TopoHwloc.cpp  TopoHwloc.hpp
src/qtview/: CMakeLists.txt  main.cpp
src/testcase/: CMakeLists.txt  case-omp-stack-issue.cpp  case-openmp-loop.cpp  main-1G-big-alloc.cpp  main-1G-small-alloc.cpp  main-simple.cpp  main-threads.cpp
src/webview/: CMakeLists.txt  Helper.py  ProfileHandler.py  bower.json  nhtpasswd.py  nhtpasswd.sh  nocache.py  prepare.sh  server.py  server.sh  webview-htpasswd.sh.in  webview.sh.in
src/webview/static/css/: prism.css  sources.css
src/webview/static/js/: details.js  helper.js  index.js  metrics.js  prism.js  selector.js  source-editor.js  sources.js  threads.js
src/webview/templates/: asm.html  details.html  help.html  index.html  layout.html  sources.html  threads.html
testcase/: CMakeLists.txt  case-openmp-loop.cpp  main-1G-big-alloc.cpp  main-1G-small-alloc.cpp  main-simple.cpp  main-threads.cpp
tests/: CMakeLists.txt  ReplayAllocTracker.cpp  TestFormattedMessage.cpp  TestHelper.cpp  TestMallocTracker.cpp  TestMovePages.cpp  TestPageTable.cpp  TestStack.cpp
webview/: CMakeLists.txt  ProfileHandler.py  bower.json  nhtpasswd.py  nhtpasswd.sh  numaprof-webview.sh.in  prepare.sh  server.py  server.sh  webview.sh.in
webview/static/css/: prism.css  sources.css  style.css
webview/static/js/: common.js  details.js  helper.js  index.js  metrics.js  prism.js  selector.js  source-editor.js  sources.js  threads.js
webview/static/styles/: style.css
webview/templates/: details.html  index.html  layout.html  sources.html  threads.html
